--- a/src/tabnav.styl
+++ b/src/tabnav.styl
@@ -9,6 +9,7 @@
       c fg("dark")
       ease colors
       rt 6px
+      mb 1px
       &[aria-current]
         c 0 1
       &:hover, &:focus
